# Copyright (C) 2005 Team OpenWoW <http://openwow.quamquam.org/>
# Copyright (C) 2008 MaNGOS foundation <http://www.getmangos.com/>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

## Process this file with automake to produce Makefile.in

# Files to add to dist process
EXTRA_DIST = \
	Affect.cpp \
	AreaTrigger.h \
	AuctionHouse.cpp \
	AuraHandler.cpp \
	AuraHandler.h \
	Character.cpp \
	Character.h \
	CharacterHandler.cpp \
	CharacterHandler.h \
	ChatHandler.cpp \
	ChatHandler.h \
	Combat.cpp \
	Combat.h \
	DatabaseInterface.cpp \
	DatabaseInterface.h \
	GameObject.cpp \
	GameObject.h \
	Gossip.h \
	GossipHandler.cpp \
	GossipHandler.h \
	Group.cpp \
	Group.h \
	GroupHandler.cpp \
	GroupHandler.h \
	Item.cpp \
	Item.h \
	ItemHandler.cpp \
	ItemHandler.h \
	Level0.cpp \
	Level1.cpp \
	Level2.cpp \
	Level3.cpp \
	MiscHandler.cpp \
	MiscHandler.h \
	MovementHandler.cpp \
	MovementHandler.h \
	MsgHandler.h \
	NPCHandler.cpp \
	NPCHandler.h \
	ObjectMgr.cpp \
	ObjectMgr.h \
	Path.h \
	PetHandler.cpp \
	PetHandler.h \
	QueryHandler.cpp \
	QueryHandler.h \
	Quest.h \
	QuestHandler.cpp \
	QuestHandler.h \
	QuestMgr.cpp \
	QuestMgr.h \
	SkillHandler.cpp \
	SkillHandler.h \
	Spell.cpp \
	Spell.h \
	SpellHandler.cpp \
	SpellHandler.h \
	SrpWorld.cpp \
	SrpWorld.h \
	Stats.h \
	TaxiHandler.cpp \
	TaxiHandler.h \
	TradeHandler.cpp \
	TradeHandler.h \
	Unit.cpp \
	Unit.h \
	World.h

